--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-    <input type="file" id="getfile" accept="text/*"/>
-    <pre id="preview"/>
+    <input type="file" id="getfile" accept=".dxf"/>
+    <div id="svg"></div>
   </body>
 </html>
