--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <input type="file" id="getfile" accept=".dxf"/>
-    <div id="svg"></div>
+    </br>
+    <canvas id="canvas"></canvas>
+    <canvas id="canvas2"></canvas>
   </body>
 </html>
