Add pan/zoom in plotter.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,8 @@
 <html>
-  <head>
-    <script type="text/javascript" src="main.js"></script>
-  </head>
   <body>
     <input type="file" id="getfile" accept=".dxf"/>
     </br>
     <canvas id="canvas"></canvas>
-    <canvas id="canvas2"></canvas>
+<!--    <canvas id="canvas2"></canvas>-->
   </body>
 </html>
